--- a/layout/headernav.html
+++ b/layout/headernav.html
@@ -51,51 +51,36 @@
   </style>
 </head>
 <body>
-<header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-white">
-    <div class="container-fluid">
-      <div class="thumbnail"><a class="navbar-brand" href="/">
-        <img src="/img/logo.png" width="100" height="100" alt="LOGO">
-      </a></div>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              WELFARE-CODE
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="/club/introduction">CLUB INTRODUCTION</a></li>
-              <li><a class="dropdown-item" href="/club/values">CLUB VALUES</a></li>
-              <li><a class="dropdown-item" href="/club/milestone">CLUB MILESTONE</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              SERVICES
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="/services/credit_bot">고교학점제 봇</a></li>
-              <li><a class="dropdown-item" href="/services/lunchon">LUNCH-ON</a></li>
-              <li><a class="dropdown-item" href="/services/etc">AND SO ON</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="/news">NEWS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="/member">MEMBERS</a>
-          </li>
-        </ul>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+      <div class="container-fluid">
+        <div class="thumbnail"><a class="navbar-brand" href="/">
+            <img src="/img/logo.png" width="100" height="100" alt="LOGO" style="margin: 10px;">
+          </a>
+        </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active">MAKERSPACE</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/club/introduction.html">INTORDUCTION</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/club/milestone.html">MILESTONE</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/news.html">NEWS</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-    </div>
-  </nav>
-</header>
+      </div>
+    </nav>
+  </header>
 </body>
 </html>
